--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,21 +1,3 @@
 slide-number: true
-theme: moon
-.reveal h1,
-.reveal h2,
-.reveal h3,
-.reveal h4,
-.reveal h5,
-.reveal h6 {
-    margin: 0 0 20px 0;
-    color: #eee8d5;
-    font-family: "League Gothic", Impact, sans-serif;
-    line-height: 0.9em;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-    text-shadow: none;
-}
-
-.reveal h1 {
-    font-size: 1.50em
-}
+theme-override: mypitchme.css
 
